--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,11 @@ body {
     width: 100%;
     height: 70.75rem;
 }
+.banner_dogs {
+    position: relative;
+    width: 100%;
+    height: 35.125rem;
+}
 .container_main_banner {
     position: absolute;
     width: 100%;
@@ -393,6 +398,54 @@ body {
     color: #ffffff;
     font-family: HypatiaSansProRegular, sans-serif;
     font-size: 16px;
+}
+
+
+.container_dogs {
+    padding-top: 40px;
+}
+.container_corm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 50px 200px;
+    gap: 30px;
+}
+.corm_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 350px;
+    box-shadow: 4px 3px 8px 1px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+    cursor: pointer;
+    color: #432E25;
+}
+.corm_box:hover {
+    color: #fd7e14;
+    transform: scale(1.1);
+}
+.corm_image {
+    width: 350px;
+    height: 400px;
+}
+.corm_text_main {
+    font-size: 1.625rem;
+    font-family: HypatiaSansProBold, sans-serif;
+    text-align: center;
+    margin-bottom: 0.75rem;
+    line-height: 1.875rem;
+    padding-top: 10px;
+}
+.corm_text {
+    font-family: HypatiaSansProRegular, sans-serif;
+    font-size: 1.25rem;
+    text-align: center;
+    padding: 0 1.875rem;
+    line-height: 1.5rem;
+    margin-bottom: 0.75rem;
 }
 
 
