--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,12 @@ body {
 }
 a {
     text-decoration: none;
+    color: #432E25;
 }
 
 .header {
     position: fixed;
-    z-index: 10;
+    z-index: 20;
     width: 100%;
     border-bottom: 1px solid #E5E5E5;
     padding: 20px 0;
@@ -40,6 +41,19 @@ a {
     margin-left: 30px;
     vertical-align: bottom;
 }
+.logo_text {
+    text-transform: uppercase;
+    font-size: 35px;
+    font-family: HypatiaSansProBold, sans-serif;
+    color: #432E25;
+    margin-left: 30px;
+    vertical-align: bottom;
+    letter-spacing: 0.2em;
+}
+.footer_logo {
+    color: #ffffff;
+}
+
 .menu {
     margin-left: 100px;
 }
@@ -66,11 +80,52 @@ a {
 }
 
 
+/* menu mobile (start) */
+.container_mobile {
+    display: none;
+    transition: all .2s linear;
+}
+.menu_mobile {
+    display: none;
+    transition: all .2s linear;
+}
+.show {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    min-height: 100%;
+    background: #ffffff;
+    position: fixed;
+    z-index: 15;
+    transition: all .2s linear;
+    padding-top: 90px;
+}
+.button_linc_mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    padding: 20px 0;
+    text-decoration: none;
+    color: #432E25;
+    font-size: 30px;
+    transition: all .2s linear;
+    cursor: pointer;
+    border-bottom: 1px solid #A3A3A3;
+}
+/* menu mobile (end) */
+
+
 .container_main {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+.main_mobile {
+    display: none;
 }
 .banner {
     position: relative;
@@ -111,6 +166,11 @@ a {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
+.text_mobile {
+    display: none;
+    align-items: center;
+    max-width: 71.25rem;
 }
 .block_text {
     display: flex;
@@ -161,7 +221,7 @@ a {
 }
 .block_image {
     width: 350px;
-    height: 400px;
+    height: 500px;
 }
 .block_image_corm {
     width: 100%;
@@ -246,6 +306,9 @@ a {
     z-index: 1;
     margin-top: 50px;
 }
+.corm_gap {
+    gap: 10px;
+}
 .text_row {
     display: flex;
     align-items: center;
@@ -255,6 +318,12 @@ a {
     font-family: HypatiaSansProBold, sans-serif;
     letter-spacing: 0.03em;
     font-size: 20px;
+}
+.not_main {
+    flex-direction: column;
+    border-top: 1px solid #A3A3A3;
+    padding: 20px 0;
+    transition: all .2s linear;
 }
 .text_row p {
     color: #fd7e14;
@@ -272,6 +341,35 @@ a {
     height: 35.6875rem;
     margin-left: -7.8125rem;
     margin-top: -1.0625rem;
+}
+.text_view {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+    cursor: pointer;
+}
+.text_not_view {
+    display: none;
+    width: 100%;
+    padding: 20px 0;
+    font-family: HypatiaSansPro, sans-serif;
+    line-height: 1.5rem;
+    text-transform: none;
+    color: #432E25;
+    font-size: 1.25rem;
+}
+.arrow_accord_down {
+    position: relative;
+    top: -3px;
+    width: 40px;
+    height: 40px;
+}
+.b-show {
+    display: block;
+    transition: all .2s linear;
+    animation: showBlock 2s linear forwards;
 }
 
 
@@ -366,7 +464,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 71.25rem;
+    width: 100px;
     gap: 40px;
 }
 .select_head_text {
@@ -487,5 +585,31 @@ a {
     }
     .banner_ingredients_content {
         padding-top: 19rem;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .menu {
+        display: none;
+    }
+    .menu_mobile {
+        display: flex;
+        width: 47px;
+        height: 48px;
+        background: url(../images/burger.png) no-repeat center;
+        border-radius: 50px;
+        margin-right: 3%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .main_mobile {
+        display: flex;
+    }
+    .container_text {
+        display: none;
+    }
+    .text_mobile {
+        display: flex;
     }
 }
