--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,9 @@ a {
     width: 100%;
     height: 70.75rem;
 }
+.contacts {
+    height: 56.75rem;
+}
 .banner_dogs {
     position: relative;
     width: 100%;
@@ -246,11 +249,13 @@ a {
     justify-content: center;
 }
 .braun {
-    width: 146px;
+    width: auto;
     height: 50px;
     color: #432E25;
     transition: 0.5s;
     border: 0.125rem solid #432E25;
+    padding: 0 20px;
+    gap: 5px;
 }
 .braun:hover {
     background: #fd7e14;
@@ -497,7 +502,7 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 71.25rem;
+    width: 100%;
     gap: 50px;
     padding: 5rem 0 3rem;
 }
@@ -606,6 +611,64 @@ a {
     border: 2px solid #fd7e14;
 }
 
+
+.container_contacts {
+    color: #000000;
+    position: relative;
+    padding: 200px 15% 0;
+}
+.text_main_contacts {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    font-family: HypatiaSansProBold, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #432E25;
+    margin-bottom: 50px;
+}
+.container_address {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 100px;
+    margin-bottom: 50px;
+}
+.box_address {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+.text_contacts {
+    line-height: normal;
+    font-family: HypatiaSansProBold, sans-serif;
+    color: #432E25;
+    font-size: 1.625rem;
+    margin-bottom: 20px;
+}
+.box_text_contacts {
+    display: flex;
+    width: 100%;
+    gap: 5px;
+    margin-bottom: 5px;
+}
+.text_address {
+    font-size: 1.25rem;
+    margin-bottom: 0;
+}
+.text_address_none {
+    font-family: HypatiaSansProRegular, sans-serif;
+    font-size: 1.25rem;
+    margin-bottom: 0;
+}
+.under_text_contacts {
+    width: 40%;
+    font-family: HypatiaSansProRegular, sans-serif;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    margin: 70px 0 20px;
+}
+
+
 @media only screen and (max-width: 1600px) {
     .banner {
         height: 60.75rem;
@@ -626,6 +689,22 @@ a {
         background: url(../images/burger.png) no-repeat center;
         border-radius: 50px;
         margin-right: 3%;
+    }
+    .container_corm {
+        padding: 50px 0;
+    }
+    .corm_box {
+        width: 280px;
+    }
+    .corm_image {
+        width: 280px;
+        height: 330px;
+    }
+    .row_why {
+        padding-left: 10px;
+    }
+    .container_contacts {
+        padding: 150px 3% 0;
     }
 }
 
